# ukr-place

./: .gitignore  README.md  package.json
contract/: Anchor.toml  package.json
contract/programs/ukr_place/: Cargo.toml
contract/programs/ukr_place/src/: lib.rs
contract/tests/: helpers.ts  ukr_place.ts
front/: package.json  tailwind.config.js
front/components/footer-actions/: footer-actions.tsx
front/components/ink-wallet-panel/: ink-wallet-panel.tsx  use-ink-wallet.ts
front/components/intro-popup/: intro-popup.tsx
front/components/live-canvas/: canvas-syncer.tsx  fake-syncer.ts  live-canvas.tsx  reddit-art-example.ts  use-live-canvas-sync.ts
front/components/palette-bar/: palette-bar.colors.ts  palette-bar.tsx
front/components/pixel-canvas/: paint-canvas.module.css  pixel-canvas.tsx  useCanvasNav.ts  useHeightCssVar.ts
front/components/pixel-coordinates/: pixel-coordinates.tsx
front/components/pixel-place-btn/: pixel-place-btn.tsx
front/components/pixel-sync/: pixel-sync.tsx
front/components/wallet-program/: use-wallet-ink.ts  use-wallet-program.ts  wallet-program.tsx
front/components/wallet-wrapper/: wallet-wrapper.global.css  wallet-wrapper.tsx
front/data/: canvas-colors.ts  charities-list.ts
front/pages/: _app.tsx  index.tsx
front/state/: canvas-pos.atom.ts  pixel-changes.atom.ts  pixel-changes.transform.ts
front/styles/: globals.css
front/types/idl/: canvas_tile.json  (+1 more)
programs/canvas-tile/: Cargo.toml
programs/ukr_place/: Cargo.toml
programs/ukr_place/src/: lib.rs
tests/: canvas_tile.ts  helpers.ts  ukr_place.ts
(+37 files in other folders)
