[package]
name = "ukr_place"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ukr_place"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.23.0", features = ["init-if-needed"] }
canvas-tile = { path = "../canvas-tile", features = ["cpi"] }
